fixed follow unfollow button alignment.

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3934,7 +3934,7 @@ span.remove.fa.fa-times {
   width: 150px;
 }
 .detail-img p img {
-  width: 100% !important;
+  width: auto !important;
   height: auto !important;
 }
 .mt15_blog{
